Fixed layout issues with flex-wrap.  Corrected routes to original.  Made /scrape redirect to /

--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -2,10 +2,16 @@
     display: flex;
 }
 
+#article-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
 div.card.article {
     height: 85%;
     margin: 50px auto;
-    width: 300px;
+    width: 250px;
 }
 
 .add-note.modal-trigger {
